  (friebe).
- Fixed bug when scriptlet.xml.workflow.casters.ToDate accepted an
  abbreviated date, interpreted it as a time and used the
  current date with given time instead the given date
  (kiesel)
- Fixed session id initialization in XMLScriptletRequest::initialize()
  (hinckel)
- Fixed rdbms.Record::set() method
  (Michael Bayer, kiesel)

Features
~~~~~~~~
- Added " @ {host}" to rdbms.SQLConnectionClosedException's message
  (friebe)
- Changed XAR file format (BC-break-free) to be less memory-consuming,
  platform-independent and get rid of original filename junk
  (friebe)
- Added a parameter "bool append" (defaulting to FALSE) to 
  io.streams.FileOutputStream's constructor
  (friebe)
- Made io.streams.FileInputStream and io.streams.FileOutputStream's
  constructors accept either an io.File or a string with the filename
  (friebe)
- Added syntactical support in text.doclet.markup API for ordered and
  unordered lists.
  (friebe)


Version 5.6.6, released 2008-04-23
----------------------------------
SVN version: 12077

Heads up!
~~~~~~~~~
- Changed xpcli / util.cmd.Runner argument passing - argv[0] should not be
  passed to Runner::main()
  (friebe)
- Deprecated addMinutes(), addHours(), addDays() methods in util.TimeSpan
  (gellweiler)
- Backwards incompatible changes in lang.reflect package
  http://news.xp-framework.net/article/240/2008/03/08/BC
  (friebe)
- Removed deprecated lang.reflect.Argument class and corresponding 
  methods in lang.reflect.Routine
  (friebe)

RFCs
~~~~
- Implemented RFC #0160: xml.IXSLProcessor::setXMLTree() / setXSLTree()
  (friebe)
- Implemented RFC #0156: Constructor::newInstance()
  (friebe)
- Implemented RFC #0155: lang.reflect.Routine::getReturnType(): Type 
  instead of string
  (friebe)
- Implemented RFC #0148: Bytes type
  (friebe)

Bugfixes
~~~~~~~~
- Made xarloader::acquire() throw a lang.FormatException in case the
  given file is not a valid XAR archive
  (friebe)